[package]
name = "graphical"
description = "A powerful, and visual tool for graphing mathematical functions and equations."
version = "0.1.3"
authors = ["EternalMoon1234", "importly"]
license = "MIT"
repository = "https://github.com/memomath/graphical"
edition = "2018"

[dependencies]
fltk = { version ="1.4" }
colored = "2.0.0"
structopt = "0.3.26"
cascade = "1.0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
